--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 #wrapper header{
-    background: ivory;
+    background: lightcyan;
     padding: 20px;
 }
 
@@ -36,7 +36,7 @@ body{
     padding: 10px 15px 10px 15px;
     cursor: pointer;
     box-shadow: inset;
-    color: rosybrown;
+    color: white;
     text-decoration: none;
     font-weight: bold;
 }
@@ -66,13 +66,14 @@ body{
 }
 
 footer{
-    background: transparent;
+    background: mintcream;
     padding: 20px;
 }
 
 footer a{
     color: black;
     text-decoration: none;
+    font-size: 15px;
 }
 section{
     padding: 20px;
